# DeCoWA

./: .gitignore  .setup_assistant  CMakeLists.txt  Doxyfile  README.md  mainpage.dox  package.xml
config/: Base_arm.srdf  chomp_planning.yaml  kinematics.yaml  mm_main.yaml  ompl_planning.yaml  paddings.yaml  sbpl_planning.yaml  sensors_kinect.yaml  stomp_config.yaml
doc/html/: annotated.html  classMobileManipulation-members.html  classMobileManipulation.html  classMobileManipulation__coll__graph.map  classMobileManipulation__coll__graph.md5  classRobotPlacement-members.html  classRobotPlacement.html  classes.html  classhdf5__dataset_1_1Hdf5Dataset-members.html  classhdf5__dataset_1_1Hdf5Dataset.html  classrcs__base__placement-members.html  classrcs__base__placement.html  classrcs__mm__locomtion_1_1gainsPID-members.html  classrcs__mm__locomtion_1_1gainsPID.html  classrcs__mm__locomtion_1_1gains_p_i_d-members.html  classrcs__mm__locomtion_1_1gains_p_i_d.html  classrcs__mm__locomtion_1_1velocities2D-members.html  classrcs__mm__locomtion_1_1velocities2D.html  classrcs__mm__locomtion_1_1velocities2_d-members.html  classrcs__mm__locomtion_1_1velocities2_d.html  classrcs__mm__main-members.html  classrcs__mm__main.html  classrcs__mm__main__coll__graph.map  classrcs__mm__main__coll__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_711bbda962522d84c483db64a3d05bfa.html  dir_99e800ac994bdf95c81c9fc7543b00ef.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  graph_legend.html  hdf5__dataset_8h_source.html  index.html  mm__locomotion_8h_source.html  mm__manipulation_8h_source.html  mm__opt_8h_source.html  (+16 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enums_2.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  functions_a.js  pages_0.js  searchdata.js  typedefs_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js  variables_7.js  variables_8.js
include/mobile_manip/: .tags  mm_locomotion.h  mm_manipulation.h  mm_opt.h  mm_robot_placement.h  mobile_manipulation.h
launch/: Base_arm_moveit_sensor_manager.launch.xml  main.launch  move_group.launch  moveit_rviz.launch  myrviz.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sbpl_planning_pipeline.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
src/: mm_locomotion.cpp  mm_main.cpp  mm_manipulation.cpp  mm_opt.cpp  mm_robot_placement.cpp  mobile_manipulation.cpp
