<package>

  <name>mobile_manip</name>
  <version>0.3.0</version>
  <description>
     Package for complete mobile manipulation
  </description>
  <author email="hemangchawla@gmail.com">Hemang Chawla</author>
  <maintainer email="hemangchawla@gmail.com">Hemang Chawla</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>map_creator</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_kinematics</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_visualization</build_depend>
  <build_depend>moveit_ros_manipulation</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>nlopt</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>trac_ik_kinematics_plugin</build_depend>
  <build_depend>vrep_common</build_depend>
  <build_depend>vrep_plugin</build_depend>
  <build_depend>vrep_ros_interface</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>map_creator</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_ros_manipulation</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>nlopt</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>trac_ik_kinematics_plugin</run_depend>
  <run_depend>vrep_common</run_depend>
  <run_depend>vrep_plugin</run_depend>
  <run_depend>vrep_ros_interface</run_depend>
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
